[package]
name = "native"
version = "0.1.0"
authors = ["Rahul Garg <rg@vihu.dev>"]
edition = "2018"
build = "native/build.rs"

[lib]
name = "native"
crate-type = ["dylib"]
path = "native/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
labrador-ldpc = { git = "https://github.com/adamgreig/labrador-ldpc", branch = "master" }
rustler = { git = "https://github.com/vihu/rustler.git", branch = "rg/unload-upgrade" }
