[package]
name = "erldpc"
version = "0.1.0"
authors = ["Rahul Garg <vihu89@gmail.com>"]
edition = "2018"

[lib]
name = "erldpc"
crate-type = ["dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
labrador-ldpc = { git = "https://github.com/adamgreig/labrador-ldpc", branch = "master" }
rustler = ">=0.13.0"
